kube/argocd/install/argocd-metrics-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-metrics
  namespace: argocd
spec:
  type: LoadBalancer
